force-app/main/default/objects/Membership_History__c/Membership_History__c.object-meta.xml
<CustomObject>
    <label>Membership History</label>
    <nameField>
        <displayFormat>MH-{000000}</displayFormat>
        <label>Membership History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>