force-app/main/default/objects/Membership_History__c/fields/Auto_Bill__c.field-meta.xml
<CustomField>
    <fullName>Auto_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Bill</label>
    <type>Checkbox</type>
</CustomField>