force-app/main/default/objects/Membership_History__c/fields/Complimentary__c.field-meta.xml
<CustomField>
    <fullName>Complimentary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complimentary</label>
    <type>Checkbox</type>
</CustomField>