force-app/main/default/objects/Membership_History__c/fields/Continuous_Years__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Years__c</fullName>
    <label>Continuous Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>