force-app/main/default/objects/Membership_History__c/fields/Dues_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dues_Amount__c</fullName>
    <label>Dues Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>