force-app/main/default/objects/Membership_History__c/fields/Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Text</label>
    <type>Checkbox</type>
</CustomField>