force-app/main/default/objects/Membership_History__c/fields/Given_By__c.field-meta.xml
<CustomField>
    <fullName>Given_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Membership History (Given By)</relationshipLabel>
    <relationshipName>Membership_Given_by</relationshipName>
    <type>Lookup</type>
</CustomField>