force-app/main/default/objects/Membership_History__c/fields/Joined__c.field-meta.xml
<CustomField>
    <fullName>Joined__c</fullName>
    <label>Joined</label>
    <type>Date</type>
</CustomField>