force-app/main/default/objects/Membership_History__c/fields/Membership_Amount__c.field-meta.xml
<CustomField>
    <fullName>Membership_Amount__c</fullName>
    <label>Membership Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>