force-app/main/default/objects/Membership_History__c/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Multi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>