force-app/main/default/objects/Membership_History__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>