force-app/main/default/objects/Membership_History__c/fields/Notice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Notice_Frequency__c</fullName>
    <label>Notice Frequency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>