force-app/main/default/objects/Membership_History__c/fields/Print_Card__c.field-meta.xml
<CustomField>
    <fullName>Print_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Card</label>
    <type>Checkbox</type>
</CustomField>