force-app/main/default/objects/Membership_History__c/fields/Renewal_Notice__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice__c</fullName>
    <label>Renewal Notice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>