force-app/main/default/objects/Membership_History__c/fields/Student_uBill_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_uBill_Date__c</fullName>
    <label>Student uBill Date</label>
    <type>Date</type>
</CustomField>