force-app/main/default/objects/Membership_History__c/fields/Year_in_School__c.field-meta.xml
<CustomField>
    <fullName>Year_in_School__c</fullName>
    <label>Year in School</label>
    <length>50</length>
    <type>Text</type>
</CustomField>